tests/manifests/ingressNetworkApigroup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: cdi-uploadproxy
      port:
        number: 443
  rules:
  - host: test.manifest.example.com
